tahini/tests/contract.tah
var balance = 1000;

fun withdraw(amount) 
    precondition: amount > 0, balance > 0
    postcondition: balance >= 0
{
    balance = balance - amount;
    return balance;
}

balance = withdraw(20);
print balance;
balance = withdraw(980);
print balance;
balance = withdraw(100);
print balance;

// 980
// 0
// RuntimeError: Precondition failed.
// [at line 3 in contract.tah] in <fn withdraw>
// [called at line 15 in contract.tah]
